# mlops-assignment-2.

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml  ct.yml
docker/: api.Dockerfile  docker-compose.yml  prometheus.yml
docs/: SUBMISSION.md
scripts/: generate_data.py  generate_drift_report.py  prepare_data.py  promote_model.py  train.py
src/churn/: config.py  schemas.py
src/churn/data/: loaders.py  splitter.py
src/churn/features/: engineering.py  pipeline.py
src/churn/models/: evaluate.py  registry.py  train.py
src/churn/monitoring/: drift.py  metrics.py
src/churn/retraining/: trigger.py
src/churn/serving/: app.py  loader.py
tests/integration/: test_api.py
tests/unit/: test_features.py  test_pipeline.py  test_schemas.py
